Added missing function

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 
       <div class="visualization">
          <h2>Record Holders</h2>
+         <button id="downloadData" class="download-button">Download Records</button>
          <table class="records-table">
             <thead>
                <tr>
